--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@ body {
   text-align: center;
   background: #f5f5f5;
 }
+
+.cmaera-container {
+  position: relative;
+  display: inline-block;
+  width: 320px;
+  height: 240px;
+}
+
+#camera {
+  width: 100%;
+  height: 100%;
+  background: black;
+}
+
+#character {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 100px;
+  opacity: 0.8; /* 透過度 */
+}
+
+.controls {
+  margin: 10px;
+}
+
+#result {
+  margin-top: 10px;
+  max-width: 320px;
+  border: 2px solid #ccc
+}
