--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background: #f5f5f5;
 }
 
-.cmaera-container {
+.camera-container {
   position: relative;
   display: inline-block;
   width: 320px;
@@ -32,5 +32,5 @@ body {
 #result {
   margin-top: 10px;
   max-width: 320px;
-  border: 2px solid #ccc
+  border: 2px solid #ccc;
 }
