--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   position: absolute;
   top: 20px;
   left: 20px;
+  transform: translate(-50%, -50%);
   width: 120px;
   opacity: 0.8; /* 透過度 */
   pointer-events: none;
