--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ body {
   object-fit: cover; /* 画面いっぱいに表示 */
 }
 
+#canvas {
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  object-fit: cover;
+}
+
 .controls {
   position: absolute;
   bottom: 70%;
